testdata/formatter/failing/structInconsistencies.go
package main

type bbcdefg struct {
a struct {
}
bb  struct{}
ccc struct {
}
}
